# test_task

./: .dockerignore  .flake8  .mypy.ini  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7b7b708a7b1b_initial_migration.py
app/: config.py
app/api/: __main__.py  main.py  routes.py  schemas.py
app/models/: database.py  image.py
app/services/: image_processing.py  rabbitmq.py
app/utils/: logging.py
app/worker/: __main__.py  main.py  processor.py
tests/: conftest.py  test_api.py  test_image_processing.py  test_models.py
